// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoveWidgetToTab should copy a Widget to a dashboard 1`] = `
{
  "created_at": 2020-05-27T12:32:49.786Z,
  "description": "move widget to tab",
  "id": "5ece5e1b74ff709b0b0dc69b",
  "owner": "admin",
  "properties": Immutable.List [],
  "search_id": "new-search-id",
  "state": Immutable.Map {
    "fa247d8f-7afa-45b7-b57e-3cdef4ee53be": {
      "formatting": {
        "highlighting": [],
      },
      "positions": Immutable.Map {
        "b34c3c6f-c49d-41d3-a65a-f746134f8f3e": {
          "col": 1,
          "height": 4,
          "row": 1,
          "width": 4,
        },
      },
      "selected_fields": undefined,
      "titles": Immutable.Map {
        "widget": Immutable.Map {
          "b34c3c6f-c49d-41d3-a65a-f746134f8f3e": "Widget Title",
        },
      },
      "widget_mapping": Immutable.Map {
        "b34c3c6f-c49d-41d3-a65a-f746134f8f3e": Immutable.Set [
          "dead-beef",
        ],
      },
      "widgets": Immutable.List [
        {
          "config": {
            "column_pivots": [],
            "event_annotation": false,
            "rollup": true,
            "row_pivots": [],
            "series": [
              {
                "config": {
                  "name": "Message Count",
                },
                "function": "count()",
              },
            ],
            "sort": [],
            "visualization": "numeric",
          },
          "filter": undefined,
          "filters": Immutable.List [],
          "id": "b34c3c6f-c49d-41d3-a65a-f746134f8f3e",
          "query": null,
          "streams": [],
          "timerange": null,
          "type": "aggregation",
        },
      ],
    },
    "5faea09b-4187-4eda-9d59-7a86d4774c73": {
      "formatting": {
        "highlighting": [],
      },
      "positions": Immutable.Map {
        "dead-beef": {
          "col": 0,
          "height": 4,
          "row": 1,
          "width": 4,
        },
      },
      "selected_fields": undefined,
      "titles": Immutable.Map {
        "widget": Immutable.Map {
          "dead-beef": "Widget Title",
        },
      },
      "widget_mapping": Immutable.Map {
        "dead-beef": Immutable.Set [
          "dead-beef",
        ],
      },
      "widgets": Immutable.List [
        {
          "config": {
            "column_pivots": [],
            "event_annotation": false,
            "rollup": true,
            "row_pivots": [],
            "series": [
              {
                "config": {
                  "name": "Message Count",
                },
                "function": "count()",
              },
            ],
            "sort": [],
            "visualization": "numeric",
          },
          "filter": undefined,
          "filters": Immutable.List [],
          "id": "dead-beef",
          "query": null,
          "streams": [],
          "timerange": null,
          "type": "aggregation",
        },
      ],
    },
  },
  "summary": "move widget to tab",
  "title": "MoveWidgetToTab",
  "type": "DASHBOARD",
}
`;

exports[`MoveWidgetToTab should move a Widget to a dashboard 1`] = `
{
  "created_at": 2020-05-27T12:32:49.786Z,
  "description": "move widget to tab",
  "id": "5ece5e1b74ff709b0b0dc69b",
  "owner": "admin",
  "properties": Immutable.List [],
  "search_id": "new-search-id",
  "state": Immutable.Map {
    "fa247d8f-7afa-45b7-b57e-3cdef4ee53be": {
      "formatting": {
        "highlighting": [],
      },
      "positions": Immutable.Map {},
      "selected_fields": undefined,
      "titles": Immutable.Map {
        "widget": Immutable.Map {},
      },
      "widget_mapping": Immutable.Map {},
      "widgets": Immutable.List [],
    },
    "5faea09b-4187-4eda-9d59-7a86d4774c73": {
      "formatting": {
        "highlighting": [],
      },
      "positions": Immutable.Map {
        "b34c3c6f-c49d-41d3-a65a-f746134f8f3e": {
          "col": 0,
          "height": 4,
          "row": 1,
          "width": 4,
        },
      },
      "selected_fields": undefined,
      "titles": Immutable.Map {
        "widget": Immutable.Map {
          "b34c3c6f-c49d-41d3-a65a-f746134f8f3e": "Widget Title",
        },
      },
      "widget_mapping": Immutable.Map {
        "b34c3c6f-c49d-41d3-a65a-f746134f8f3e": Immutable.Set [
          "dead-beef",
        ],
      },
      "widgets": Immutable.List [
        {
          "config": {
            "column_pivots": [],
            "event_annotation": false,
            "rollup": true,
            "row_pivots": [],
            "series": [
              {
                "config": {
                  "name": "Message Count",
                },
                "function": "count()",
              },
            ],
            "sort": [],
            "visualization": "numeric",
          },
          "filter": undefined,
          "filters": Immutable.List [],
          "id": "b34c3c6f-c49d-41d3-a65a-f746134f8f3e",
          "query": null,
          "streams": [],
          "timerange": null,
          "type": "aggregation",
        },
      ],
    },
  },
  "summary": "move widget to tab",
  "title": "MoveWidgetToTab",
  "type": "DASHBOARD",
}
`;

exports[`MoveWidgetToTab should provide a default position in case the widgets position cannot be found 1`] = `
{
  "created_at": 2020-05-27T12:32:49.786Z,
  "description": "move widget to tab",
  "id": "5ece5e1b74ff709b0b0dc69b",
  "owner": "admin",
  "properties": Immutable.List [],
  "search_id": "new-search-id",
  "state": Immutable.Map {
    "fa247d8f-7afa-45b7-b57e-3cdef4ee53be": {
      "formatting": {
        "highlighting": [],
      },
      "positions": Immutable.Map {},
      "selected_fields": undefined,
      "titles": Immutable.Map {
        "widget": Immutable.Map {},
      },
      "widget_mapping": Immutable.Map {},
      "widgets": Immutable.List [],
    },
    "5faea09b-4187-4eda-9d59-7a86d4774c73": {
      "formatting": {
        "highlighting": [],
      },
      "positions": Immutable.Map {
        "b34c3c6f-c49d-41d3-a65a-f746134f8f3e": {
          "col": 1,
          "height": 4,
          "row": 1,
          "width": 4,
        },
      },
      "selected_fields": undefined,
      "titles": Immutable.Map {
        "widget": Immutable.Map {
          "b34c3c6f-c49d-41d3-a65a-f746134f8f3e": "Widget Title",
        },
      },
      "widget_mapping": Immutable.Map {
        "b34c3c6f-c49d-41d3-a65a-f746134f8f3e": Immutable.Set [
          "dead-beef",
        ],
      },
      "widgets": Immutable.List [
        {
          "config": {
            "column_pivots": [],
            "event_annotation": false,
            "rollup": true,
            "row_pivots": [],
            "series": [
              {
                "config": {
                  "name": "Message Count",
                },
                "function": "count()",
              },
            ],
            "sort": [],
            "visualization": "numeric",
          },
          "filter": undefined,
          "filters": Immutable.List [],
          "id": "b34c3c6f-c49d-41d3-a65a-f746134f8f3e",
          "query": null,
          "streams": [],
          "timerange": null,
          "type": "aggregation",
        },
      ],
    },
  },
  "summary": "move widget to tab",
  "title": "MoveWidgetToTab",
  "type": "DASHBOARD",
}
`;

exports[`MoveWidgetToTab should work when titles are empty 1`] = `
{
  "created_at": 2020-05-27T12:32:49.786Z,
  "description": "move widget to tab",
  "id": "5ece5e1b74ff709b0b0dc69b",
  "owner": "admin",
  "properties": Immutable.List [],
  "search_id": "new-search-id",
  "state": Immutable.Map {
    "fa247d8f-7afa-45b7-b57e-3cdef4ee53be": {
      "formatting": {
        "highlighting": [],
      },
      "positions": Immutable.Map {},
      "selected_fields": undefined,
      "titles": Immutable.Map {},
      "widget_mapping": Immutable.Map {},
      "widgets": Immutable.List [],
    },
    "5faea09b-4187-4eda-9d59-7a86d4774c73": {
      "formatting": {
        "highlighting": [],
      },
      "positions": Immutable.Map {
        "b34c3c6f-c49d-41d3-a65a-f746134f8f3e": {
          "col": 0,
          "height": 4,
          "row": 1,
          "width": 4,
        },
      },
      "selected_fields": undefined,
      "titles": Immutable.Map {},
      "widget_mapping": Immutable.Map {
        "b34c3c6f-c49d-41d3-a65a-f746134f8f3e": Immutable.Set [
          "dead-beef",
        ],
      },
      "widgets": Immutable.List [
        {
          "config": {
            "column_pivots": [],
            "event_annotation": false,
            "rollup": true,
            "row_pivots": [],
            "series": [
              {
                "config": {
                  "name": "Message Count",
                },
                "function": "count()",
              },
            ],
            "sort": [],
            "visualization": "numeric",
          },
          "filter": undefined,
          "filters": Immutable.List [],
          "id": "b34c3c6f-c49d-41d3-a65a-f746134f8f3e",
          "query": null,
          "streams": [],
          "timerange": null,
          "type": "aggregation",
        },
      ],
    },
  },
  "summary": "move widget to tab",
  "title": "MoveWidgetToTab",
  "type": "DASHBOARD",
}
`;
